--- a/src/styles/Table.css
+++ b/src/styles/Table.css
@@ -3,13 +3,13 @@
     border-collapse: collapse;
     margin-top: 20px;
 }
-  
+
 .score-table th, .score-table td {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: center;
 }
-  
+
 .score-table th {
     background-color: #ed9441;
     color: white;
@@ -36,6 +36,8 @@
 .total-score {
     margin-top: 10px;
     font-size: 18px;
+    font-weight: bold;
+    color: #2c3e50;
 }
 
 .evaluation-list {
@@ -45,12 +47,14 @@
 .evaluation-item {
     margin-bottom: 5px;
     color: #2c3e50;
-    transition: background-color 0.3s;
-    padding: 5px;
+    transition: background-color 0.3s, border 0.3s;
+    padding: 8px;
     border-radius: 5px;
+    border: 1px solid transparent;
 }
 
 .evaluation-item.active {
     background-color: #eaf4fc;
     border: 2px solid #3498db;
+    font-weight: bold;
 }
