--- a/src/styles/Table.css
+++ b/src/styles/Table.css
@@ -33,6 +33,23 @@
     background-color: #eaf4fc;
 }
 
+.option-cell.correct {
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+    color: #155724;
+}
+
+.option-cell.incorrect {
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+    color: #721c24;
+}
+
+.option-cell.selected {
+    border: 2px solid #3498db;
+    background-color: #eaf4fc;
+}
+
 .total-score {
     margin-top: 10px;
     font-size: 18px;
