--- a/src/styles/Quiz.css
+++ b/src/styles/Quiz.css
@@ -4,9 +4,18 @@
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    width: 100%;
+    width: 90%;
     max-width: 600px;
     text-align: center;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.quiz-container p {
+    text-align: justify;
+    font-size: 1rem;
+    margin: 10px 0;
+    line-height: 1.5;
 }
   
 .quiz-container h1 {
@@ -17,6 +26,8 @@
     width: 100%;
     max-width: 400px;
     margin-bottom: 20px;
+    height: auto;
+    object-fit: contain;
 }
 
 .question-container img {
@@ -26,6 +37,20 @@
     display: block;
     margin: 0 auto 20px auto;
     object-fit: contain;
+}
+
+.back-button {
+    background-color: #e74c3c;
+}
+
+.back-button:hover {
+    background-color: #c0392b;
+}
+
+.back-button-container {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 10px;
 }
 
 .quiz-container .score {
@@ -50,4 +75,28 @@
 .selected {
     border: 2px solid #3498db;
     background-color: #eaf4fc;
+}
+
+@media (max-width: 768px) {
+    .quiz-container {
+        padding: 15px;
+    }
+
+    .quiz-container p {
+        font-size: 0.9rem;
+    }
+
+    .question-container img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .score-table th,
+    .score-table td {
+        padding: 5px;
+    }
+
+    .score-table {
+        font-size: 0.8rem;
+    }
 }
