--- a/src/styles/Quiz.css
+++ b/src/styles/Quiz.css
@@ -21,30 +21,19 @@
 .quiz-container h1 {
     color: black;
 }
-  
-.question-container img {
-    max-width: 100%; /* Limita el ancho al tamaño del contenedor */
-    width: auto;
-    height: auto;
-    max-height: 300px; /* Limita la altura máxima */
-    object-fit: contain; /* Mantiene la proporción de la imagen */
-    display: block;
-    margin: 0 auto 20px auto; /* Centra la imagen */
-}
 
 .question-container img {
     width: auto;
     max-width: 100%;
     max-height: 300px;
-    display: block;
-    margin: 0 auto 20px auto;
     object-fit: contain;
+    display: block;
+    margin: 0 auto 20px;
 }
 
 .quiz-container .score {
     font-size: 20px;
     margin-top: 20px;
-    text-align: center;
     color: #3498db;
 }
 
@@ -79,14 +68,13 @@
 
     .quiz-content {
         margin-top: 80px;
-    }    
+    }
 
     .quiz-container p {
         font-size: 0.9rem;
     }
 
     .question-container img {
-        max-width: 100%;
         max-height: 200px;
     }
 
