--- a/src/styles/Table.css
+++ b/src/styles/Table.css
@@ -18,7 +18,6 @@
     text-align: center;
     word-wrap: break-word;
     white-space: normal;
-    overflow: hidden;
     text-overflow: ellipsis;
 }
 
@@ -71,4 +70,22 @@
     background-color: #eaf4fc;
     border: 2px solid #3498db;
     font-weight: bold;
+}
+
+.tooltip {
+    position: absolute;
+    left: 100%;
+    top: 50%;
+    transform: translate(10px, -50%);
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    border-radius: 8px;
+    font-size: 14px;
+    max-width: 220px;
+    z-index: 1000;
+    white-space: pre-wrap;
+    visibility: visible;
+    opacity: 1;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
