--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,5 +1,10 @@
 .header {
     display: flex;
+    justify-content: space-between; /* Separar logo y botón */
+    align-items: center;
+    padding: 10px 20px; /* Agrega un padding para dar espacio alrededor */
+    background-color: #145f77; /* Fondo de encabezado para resaltar el logo y el botón */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para darle profundidad */
 }
 
 .header-content {
@@ -11,6 +16,7 @@
 .header-logo {
     height: 50px;
     cursor: pointer;
+    margin-right: 10px; /* Margen a la derecha para separarlo del botón */
 }
 
 .header-home-button {
@@ -20,6 +26,7 @@
     cursor: pointer;
     font-size: 1rem;
     border: none;
+    color: white; /* Asegura que el texto sea blanco para contraste */
 }
 
 .header-home-button:hover {
