--- a/src/styles/Question.css
+++ b/src/styles/Question.css
@@ -6,6 +6,14 @@
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
 }
 
+
+.confetti-animation {
+  position: absolute;
+  z-index: 100;
+  pointer-events: none;  /* Esto asegura que la animación no interfiera con otros elementos */
+}
+
+
 .question-block {
     margin-bottom: 15px;
 }
